# tripletex_ai_agent

./: .dockerignore  .gcloudignore  .gitignore  CLAUDE.md  Dockerfile  HANDOVER.md  README.md  TASKS-core.md  TASKS-feature.md  TASKS-qa.md  TASKS.md  clouddeploy.sh  deploy-magnus.sh  deploy.sh  pyproject.toml  rollback.sh
.claude/: settings.json
.claude/agents/: core-agent.md  feature-agent.md  lead-agent.md  qa-agent.md  researcher-agent.md  strategist-agent.md
.claude/hooks/: pre-commit.sh  (+1 more)
.devcontainer/: devcontainer.json  post-create.sh
docs/: challenge-overview.md  endpoint-spec.md  mcp_endpoint.md  mcp_examples.md  mcp_overview.md  mcp_scoring.md  openapi-schemas.json  rfc-001-entity-resolution.md  rfc-002-invoice-service.md  rfc-003-handler-driven-prompt.md  rfc-004-delete-handler-consolidation.md  sandbox.md  scoring.md  strategy.md  tripletex-api-compact.json  tripletex-api.md  weekend-plan.md
patches/: claude-vertex-devcontainer.md  claude-vertex.patch
runs/: 2026-03-20_21-10-04_create_project_tripletex-agent-magnus.json  2026-03-20_21-22-49_register_payment_tripletex-agent-magnus.json  2026-03-20_21-53-31_create_voucher_tripletex-agent-magnus.json  2026-03-20_22-19-04_create_customer_tripletex-agent-magnus.json  2026-03-20_22-21-18_create_customer_tripletex-agent-magnus.json  2026-03-20_22-29-17_create_product_tripletex-agent-magnus.json  2026-03-20_22-29-57_create_supplier_tripletex-agent-2.json  2026-03-20_22-34-37_register_payment_tripletex-agent-2.json  2026-03-20_22-35-15_create_invoice_tripletex-agent-magnus.json  2026-03-20_22-40-23_create_product_tripletex-agent-2.json  2026-03-20_22-40-45_create_dimension_voucher_tripletex-agent-2.json  2026-03-20_22-47-46_send_invoice_tripletex-agent-2.json  2026-03-20_22-49-24_create_invoice_tripletex-agent-2.json  2026-03-20_22-53-07_create_invoice_tripletex-agent-magnus.json  2026-03-20_22-57-11_create_invoice_tripletex-agent-2.json  2026-03-20_22-58-14_create_product_tripletex-agent-2.json  2026-03-20_22-58-29_create_department_tripletex-agent-2.json  2026-03-20_23-04-40_create_voucher_tripletex-agent-magnus.json  2026-03-20_23-05-42_unknown_tripletex-agent-2.json  2026-03-20_23-11-39_register_payment_tripletex-agent-2.json  2026-03-20_23-22-43_create_supplier_tripletex-agent-magnus.json  2026-03-20_23-33-41_register_payment_tripletex-agent-2.json  2026-03-20_23-42-56_create_travel_expense_tripletex-agent-2.json  2026-03-20_23-46-21_create_voucher_tripletex-agent-magnus.json  2026-03-20_23-46-48_create_department_tripletex-agent-2.json  2026-03-20_23-51-52_create_product_tripletex-agent-2.json  2026-03-20_23-52-13_log_timesheet_tripletex-agent-2.json  2026-03-20_23-56-14_create_employee_tripletex-agent-2.json  2026-03-21_00-01-25_create_voucher_tripletex-agent-2.json  2026-03-21_00-03-52_create_voucher_tripletex-agent-magnus.json  2026-03-21_00-04-09_create_department_tripletex-agent-magnus.json  2026-03-21_00-05-03_create_department_tripletex-agent-magnus.json  2026-03-21_00-05-23_create_invoice_tripletex-agent-magnus.json  2026-03-21_00-06-32_update_project_tripletex-agent-magnus.json  2026-03-21_00-17-15_create_invoice_tripletex-agent-magnus.json  2026-03-21_00-18-46_create_voucher_tripletex-agent-magnus.json  2026-03-21_00-20-33_create_employee_tripletex-agent-2.json  2026-03-21_00-21-15_create_invoice_tripletex-agent-2.json  2026-03-21_00-24-02_unknown_tripletex-agent-magnus.json  2026-03-21_00-39-29_send_invoice_tripletex-agent-2.json  (+128 more)
scripts/: auto-improve-stian.sh  auto-improve.sh  capture_runs.py  competition_test.py  export_handler.py  sim_all_tasks.py  summarize_runs.py  test_handler_direct.py
src/: api_client.py  constants.py  llm.py  models.py  sandbox_explorer.py  server.py  task_router.py
tests/: conftest.py  prompt_harness_utils.py  test_all_handlers_sandbox.py  test_api_client.py  test_competition_patterns.py  test_integration_sandbox.py  test_llm.py  test_models.py  test_prompt_harness.py  test_resolvers.py  test_sandbox_explorer.py  test_server.py  test_task_router.py
(+251 files in other folders)
